UDIM Mirror Flip U only works on first Tile #75793

Closed
opened 2020-04-16 17:46:38 +02:00 by Nuno Conceicao · 7 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 441.28

Blender Version
Broken: version: 2.83 (sub 13), branch: master, commit date: 2020-04-15 21:34, hash: f0221ff667
Worked: (newest version of Blender that worked as expected)

Short description of error
When using the mirror modifier together with UDIM Tiles, the Flip U option on the mirron modifier only works on first Tile of the UDIM.
(Also it seems it seems it doesn't render anything in cycles with a generated texture, only if saved on file, not sure if this is a know issue)

Exact steps for others to reproduce the error
Attached Blend file with a simple setup
UDIM_Bug.blend

Please fill the tiles with a grid otherwise it will be just black (you can also save the UDIM images after)
I left the Flip U flag on the modifier ON for verification

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 441.28 **Blender Version** Broken: version: 2.83 (sub 13), branch: master, commit date: 2020-04-15 21:34, hash: `f0221ff667` Worked: (newest version of Blender that worked as expected) **Short description of error** When using the mirror modifier together with UDIM Tiles, the Flip U option on the mirron modifier only works on first Tile of the UDIM. (Also it seems it seems it doesn't render anything in cycles with a generated texture, only if saved on file, not sure if this is a know issue) **Exact steps for others to reproduce the error** Attached Blend file with a simple setup [UDIM_Bug.blend](https://archive.blender.org/developer/F8477081/UDIM_Bug.blend) Please fill the tiles with a grid otherwise it will be just black (you can also save the UDIM images after) I left the Flip U flag on the modifier ON for verification
Author

Added subscriber: @NunoAlexandreConceicao

Added subscriber: @NunoAlexandreConceicao
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Philipp Oeser self-assigned this 2020-04-16 17:55:33 +02:00
Member

Confirmed, checking...

Confirmed, checking...
Author

One day!!! OMG good job

One day!!! OMG good job

This issue was referenced by 2a2aa6abd0

This issue was referenced by 2a2aa6abd0ae45133b083368be4bee77a1a420c4
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Code Documentation
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#75793
No description provided.